--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,3 +24,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
 dbfxsql = "dbfxsql:run"
+
+[[tool.mypy.overrides]]
+module = ["click.*", "dbf.*", "pymssql.*", "prettytable.*", "watchfiles.*", "yaspin.*"]
+ignore_missing_imports = true
